# Dockerfiles

pytorch-cuda-base/: Dockerfile  build_docker_image.sh  create_start_docker_container.sh
pytorch-cuda-poetry/: Dockerfile  build_docker_image.sh  create_start_docker_container.sh  pyproject.toml
