[tool.poetry]
name = "pytorch-cuda-poetry"
version = "0.1.0"
description = "Testing Docker + Poetry Developement Setup"
authors = ["Paresh Pradhan"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
scipy = "^1.7.2"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
spacy = "^3.2.0"
spacy-transformers = "^1.1.2"
transformers = "4.11.3"
datasets = "^1.15.1"
ray = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
